# npuzzle

./: .gitignore  Cargo.toml  Makefile  README.md  author
npuzzle_cli/: Cargo.toml
npuzzle_cli/src/: logger.rs  main.rs
npuzzle_lib/: Cargo.toml
npuzzle_lib/src/: board.rs  generator.rs  grid2d.rs  grid_traits.rs  lib.rs  utils.rs
npuzzle_vis/: Cargo.toml
npuzzle_vis/src/: components.rs  debug.rs  main.rs  menu_plugin.rs  puzzle_plugin.rs  settings.rs  splash_plugin.rs  utils.rs
npuzzle_vis/src/settings/: colorpallete.rs
resources/: README.md  npuzzle_eval.md
src/: main.rs
src/npuzzle/: astar.rs  board.rs  generator.rs  grid2d.rs  grid_traits.rs  launcher.rs  logger.rs  mod.rs  statereader.rs  status.rs  utils.rs
tests/npuzzle_states/: README.md
tests/npuzzle_states/basic_errors/: invalid_character  invalid_value_00  invalid_value_01  no_size
