[package]
name = "npuzzle_vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
npuzzle_lib = { path = "../npuzzle_lib"}
# Remove dynamic before shipping
bevy = {version = "0.6", features =["dynamic"]}
bevy-inspector-egui = "0.9.0"